--- a/CCS-Uploader/Controllers/Prefs/AccountView.xib
+++ b/CCS-Uploader/Controllers/Prefs/AccountView.xib
@@ -13,46 +13,9 @@
         <customObject id="-1" userLabel="First Responder" customClass="FirstResponder"/>
         <customObject id="-3" userLabel="Application"/>
         <customView autoresizesSubviews="NO" translatesAutoresizingMaskIntoConstraints="NO" id="1">
-            <rect key="frame" x="0.0" y="0.0" width="480" height="228"/>
+            <rect key="frame" x="0.0" y="0.0" width="480" height="131"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
             <subviews>
-                <box autoresizesSubviews="NO" title="Active Services" borderType="line" id="Qbg-ld-TVS">
-                    <rect key="frame" x="-3" y="136" width="486" height="92"/>
-                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
-                    <view key="contentView">
-                        <rect key="frame" x="1" y="1" width="484" height="76"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <subviews>
-                            <button id="QDD-29-e9c">
-                                <rect key="frame" x="19" y="50" width="118" height="18"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
-                                <buttonCell key="cell" type="check" title="QuicPost" bezelStyle="regularSquare" imagePosition="left" state="on" inset="2" id="XEI-Jk-Yku">
-                                    <behavior key="behavior" changeContents="YES" doesNotDimImage="YES" lightByContents="YES"/>
-                                    <font key="font" metaFont="system"/>
-                                </buttonCell>
-                            </button>
-                            <button id="CAK-G9-iCw">
-                                <rect key="frame" x="141" y="50" width="118" height="18"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
-                                <buttonCell key="cell" type="check" title="CORE" bezelStyle="regularSquare" imagePosition="left" state="on" inset="2" id="8c0-yD-D7p">
-                                    <behavior key="behavior" changeContents="YES" doesNotDimImage="YES" lightByContents="YES"/>
-                                    <font key="font" metaFont="system"/>
-                                </buttonCell>
-                            </button>
-                            <textField verticalHuggingPriority="750" horizontalCompressionResistancePriority="250" id="tZD-l5-GcV">
-                                <rect key="frame" x="19" y="11" width="446" height="28"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
-                                <textFieldCell key="cell" controlSize="mini" sendsActionOnEndEditing="YES" alignment="center" title="If no services are selected, QuicPost is used as the default service. To setup these services, please contact customer support." id="U0q-WZ-eXD">
-                                    <font key="font" size="11" name="LucidaGrande"/>
-                                    <color key="textColor" name="disabledControlTextColor" catalog="System" colorSpace="catalog"/>
-                                    <color key="backgroundColor" name="controlColor" catalog="System" colorSpace="catalog"/>
-                                </textFieldCell>
-                            </textField>
-                        </subviews>
-                    </view>
-                    <color key="borderColor" white="0.0" alpha="0.41999999999999998" colorSpace="calibratedWhite"/>
-                    <color key="fillColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
-                </box>
                 <box autoresizesSubviews="NO" title="Login Information" borderType="line" id="5Hr-Te-VQo">
                     <rect key="frame" x="-3" y="-4" width="486" height="136"/>
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
@@ -61,7 +24,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" id="Upk-4Y-YK2">
-                                <rect key="frame" x="10" y="93" width="154" height="17"/>
+                                <rect key="frame" x="83" y="93" width="116" height="17"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                                 <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" sendsActionOnEndEditing="YES" alignment="right" title="Default login for:" id="sLJ-Uc-4fc">
                                     <font key="font" metaFont="system"/>
@@ -70,7 +33,7 @@
                                 </textFieldCell>
                             </textField>
                             <popUpButton verticalHuggingPriority="750" id="Rjh-AG-Be7">
-                                <rect key="frame" x="168" y="88" width="199" height="26"/>
+                                <rect key="frame" x="203" y="88" width="199" height="26"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                                 <popUpButtonCell key="cell" type="push" bezelStyle="rounded" alignment="left" lineBreakMode="truncatingTail" borderStyle="borderAndBezel" imageScaling="proportionallyDown" inset="2" id="SIz-bP-Ygl">
                                     <behavior key="behavior" lightByBackground="YES" lightByGray="YES"/>
@@ -88,7 +51,7 @@
                                 </popUpButtonCell>
                             </popUpButton>
                             <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" id="UNE-R6-yZu">
-                                <rect key="frame" x="16" y="67" width="148" height="17"/>
+                                <rect key="frame" x="83" y="67" width="116" height="17"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                                 <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" sendsActionOnEndEditing="YES" alignment="right" title="Username:" id="HWi-ZW-Wrq">
                                     <font key="font" metaFont="system"/>
@@ -97,7 +60,7 @@
                                 </textFieldCell>
                             </textField>
                             <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" id="1L1-Bi-YXe">
-                                <rect key="frame" x="16" y="41" width="148" height="17"/>
+                                <rect key="frame" x="83" y="41" width="116" height="17"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                                 <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" sendsActionOnEndEditing="YES" alignment="right" title="Password:" id="YJb-it-nR3">
                                     <font key="font" metaFont="system"/>
@@ -106,34 +69,40 @@
                                 </textFieldCell>
                             </textField>
                             <textField verticalHuggingPriority="750" id="xni-1Q-SAw">
-                                <rect key="frame" x="170" y="64" width="194" height="22"/>
+                                <rect key="frame" x="205" y="64" width="194" height="22"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                                 <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" selectable="YES" editable="YES" sendsActionOnEndEditing="YES" state="on" borderStyle="bezel" drawsBackground="YES" id="2k2-Qg-wNi">
                                     <font key="font" metaFont="system"/>
                                     <color key="textColor" name="textColor" catalog="System" colorSpace="catalog"/>
                                     <color key="backgroundColor" name="textBackgroundColor" catalog="System" colorSpace="catalog"/>
                                 </textFieldCell>
+                                <connections>
+                                    <outlet property="nextKeyView" destination="hN4-cW-Z0N" id="Waf-yf-3LE"/>
+                                </connections>
                             </textField>
                             <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" id="gZy-pW-S0j">
-                                <rect key="frame" x="16" y="14" width="148" height="17"/>
+                                <rect key="frame" x="83" y="14" width="116" height="17"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
-                                <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" sendsActionOnEndEditing="YES" alignment="right" title="CORE URL:" id="KZJ-ob-jS5">
+                                <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" sendsActionOnEndEditing="YES" alignment="right" title="CORE domain:" id="KZJ-ob-jS5">
                                     <font key="font" metaFont="system"/>
                                     <color key="textColor" name="controlTextColor" catalog="System" colorSpace="catalog"/>
                                     <color key="backgroundColor" name="controlColor" catalog="System" colorSpace="catalog"/>
                                 </textFieldCell>
                             </textField>
                             <textField verticalHuggingPriority="750" id="fS6-ix-PY7">
-                                <rect key="frame" x="170" y="11" width="194" height="22"/>
+                                <rect key="frame" x="205" y="11" width="194" height="22"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                                 <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" selectable="YES" editable="YES" sendsActionOnEndEditing="YES" state="on" borderStyle="bezel" drawsBackground="YES" id="t7V-BB-L1O">
                                     <font key="font" metaFont="system"/>
                                     <color key="textColor" name="textColor" catalog="System" colorSpace="catalog"/>
                                     <color key="backgroundColor" name="textBackgroundColor" catalog="System" colorSpace="catalog"/>
                                 </textFieldCell>
+                                <connections>
+                                    <outlet property="nextKeyView" destination="xni-1Q-SAw" id="rGU-YA-1c7"/>
+                                </connections>
                             </textField>
                             <secureTextField verticalHuggingPriority="750" id="hN4-cW-Z0N">
-                                <rect key="frame" x="170" y="38" width="194" height="22"/>
+                                <rect key="frame" x="205" y="38" width="194" height="22"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                                 <secureTextFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" selectable="YES" editable="YES" sendsActionOnEndEditing="YES" borderStyle="bezel" drawsBackground="YES" usesSingleLineMode="YES" id="c1J-lh-leX">
                                     <font key="font" metaFont="system"/>
@@ -143,6 +112,9 @@
                                         <string>NSAllRomanInputSourcesLocaleIdentifier</string>
                                     </allowedInputSourceLocales>
                                 </secureTextFieldCell>
+                                <connections>
+                                    <outlet property="nextKeyView" destination="fS6-ix-PY7" id="rhZ-7H-4LL"/>
+                                </connections>
                             </secureTextField>
                         </subviews>
                     </view>
