--- a/CCS-Uploader/Controllers/Wizard/BrowseView.xib
+++ b/CCS-Uploader/Controllers/Wizard/BrowseView.xib
@@ -3,6 +3,7 @@
     <dependencies>
         <deployment version="1070" identifier="macosx"/>
         <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="4514"/>
+        <plugIn identifier="com.apple.imagekit.ibplugin" version="3338"/>
     </dependencies>
     <objects>
         <customObject id="-2" userLabel="File's Owner" customClass="BrowseViewController">
@@ -10,23 +11,25 @@
                 <outlet property="advancedOptionsPopover" destination="Ev0-cL-VcC" id="aUQ-CH-x6i"/>
                 <outlet property="tblRolls" destination="Eum-26-wUS" id="Cjw-xt-uA5"/>
                 <outlet property="view" destination="1" id="2"/>
+                <outlet property="viewFolderPopover" destination="yFD-oL-e8k" id="rLe-p6-QF4"/>
+                <outlet property="viewRollPopover" destination="yFD-oL-e8k" id="gwg-UO-aJ7"/>
             </connections>
         </customObject>
         <customObject id="-1" userLabel="First Responder" customClass="FirstResponder"/>
         <customObject id="-3" userLabel="Application"/>
         <customView id="1">
-            <rect key="frame" x="0.0" y="0.0" width="901" height="462"/>
+            <rect key="frame" x="0.0" y="0.0" width="901" height="460"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
             <subviews>
                 <scrollView autohidesScrollers="YES" horizontalLineScroll="26" horizontalPageScroll="10" verticalLineScroll="26" verticalPageScroll="10" usesPredominantAxisScrolling="NO" id="yxB-Hf-6Hr">
-                    <rect key="frame" x="0.0" y="0.0" width="901" height="436"/>
+                    <rect key="frame" x="0.0" y="0.0" width="901" height="434"/>
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                     <clipView key="contentView" id="F2u-mf-K8b">
-                        <rect key="frame" x="1" y="17" width="899" height="418"/>
+                        <rect key="frame" x="1" y="17" width="899" height="416"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <tableView verticalHuggingPriority="750" allowsExpansionToolTips="YES" columnAutoresizingStyle="lastColumnOnly" alternatingRowBackgroundColors="YES" columnReordering="NO" multipleSelection="NO" autosaveColumns="NO" typeSelect="NO" rowHeight="24" headerView="5ff-9Y-YHa" viewBased="YES" id="Eum-26-wUS">
-                                <rect key="frame" x="0.0" y="0.0" width="899" height="418"/>
+                                <rect key="frame" x="0.0" y="0.0" width="899" height="416"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <size key="intercellSpacing" width="3" height="2"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
@@ -84,7 +87,7 @@
                                         </tableHeaderCell>
                                         <popUpButtonCell key="dataCell" type="bevel" title="Pop Up" bezelStyle="rounded" alignment="left" lineBreakMode="truncatingTail" borderStyle="bezel" imageScaling="proportionallyDown" inset="2" pullsDown="YES" preferredEdge="maxY" id="rBF-nI-1XW">
                                             <behavior key="behavior" lightByBackground="YES" lightByGray="YES"/>
-                                            <font key="font" metaFont="system"/>
+                                            <font key="font" metaFont="menu"/>
                                             <menu key="menu" title="OtherViews" id="glN-9r-G7b">
                                                 <items>
                                                     <menuItem title="Pop Up" hidden="YES" id="krT-fp-oNX"/>
@@ -104,7 +107,7 @@
                                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                                                 <popUpButtonCell key="cell" type="push" bezelStyle="rounded" alignment="left" lineBreakMode="truncatingTail" borderStyle="borderAndBezel" imageScaling="proportionallyDown" inset="2" id="ph7-dv-Zvt">
                                                     <behavior key="behavior" lightByBackground="YES" lightByGray="YES"/>
-                                                    <font key="font" metaFont="system"/>
+                                                    <font key="font" metaFont="menu"/>
                                                     <menu key="menu" title="OtherViews" id="uRS-kv-mXH"/>
                                                 </popUpButtonCell>
                                                 <connections>
@@ -263,10 +266,13 @@
                                             <button verticalHuggingPriority="750" id="Og0-gY-eXX">
                                                 <rect key="frame" x="633" y="1" width="64" height="17"/>
                                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
-                                                <buttonCell key="cell" type="inline" title="Review" bezelStyle="inline" alignment="center" borderStyle="border" inset="2" id="UAY-u1-cuj">
+                                                <buttonCell key="cell" type="inline" title="View" bezelStyle="inline" alignment="center" borderStyle="border" inset="2" id="UAY-u1-cuj">
                                                     <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
                                                     <font key="font" metaFont="smallSystemBold"/>
                                                 </buttonCell>
+                                                <connections>
+                                                    <action selector="clickedViewRoll:" target="-2" id="OVh-ih-xWq"/>
+                                                </connections>
                                             </button>
                                         </prototypeCellViews>
                                     </tableColumn>
@@ -319,7 +325,7 @@
                     </tableHeaderView>
                 </scrollView>
                 <button verticalHuggingPriority="750" id="AXN-uX-0NY">
-                    <rect key="frame" x="-6" y="434" width="163" height="32"/>
+                    <rect key="frame" x="-6" y="432" width="163" height="32"/>
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                     <buttonCell key="cell" type="push" title="Browse for Images" bezelStyle="rounded" image="NSIconViewTemplate" imagePosition="left" alignment="center" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="nHK-Gq-NjE">
                         <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
@@ -330,7 +336,7 @@
                     </connections>
                 </button>
                 <button verticalHuggingPriority="750" id="3qT-86-83T">
-                    <rect key="frame" x="735" y="434" width="172" height="32"/>
+                    <rect key="frame" x="735" y="432" width="172" height="32"/>
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                     <buttonCell key="cell" type="push" title="Advanced Options" bezelStyle="rounded" image="NSAdvanced" imagePosition="left" alignment="center" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="cHS-f3-jZR">
                         <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
@@ -339,6 +345,14 @@
                     <connections>
                         <action selector="advancedOptionsClicked:" target="-2" id="m2I-cg-iQP"/>
                     </connections>
+                </button>
+                <button verticalHuggingPriority="750" id="4PM-wW-Wr1">
+                    <rect key="frame" x="587" y="432" width="148" height="32"/>
+                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
+                    <buttonCell key="cell" type="push" title="Photographers" bezelStyle="rounded" image="NSUserGroup" imagePosition="left" alignment="center" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="OY8-wY-WEE">
+                        <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
+                        <font key="font" metaFont="system"/>
+                    </buttonCell>
                 </button>
             </subviews>
         </customView>
@@ -433,10 +447,75 @@
                 </menuItem>
             </items>
         </menu>
+        <viewController id="KDj-0y-g5D" userLabel="Popover View Controller">
+            <connections>
+                <outlet property="view" destination="dBi-ji-N2n" id="VFb-nJ-b0m"/>
+            </connections>
+        </viewController>
+        <popover behavior="semitransient" id="yFD-oL-e8k">
+            <connections>
+                <outlet property="contentViewController" destination="KDj-0y-g5D" id="7za-9p-StB"/>
+            </connections>
+        </popover>
+        <customView id="dBi-ji-N2n">
+            <rect key="frame" x="0.0" y="0.0" width="839" height="558"/>
+            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
+            <subviews>
+                <imageView horizontalHuggingPriority="251" verticalHuggingPriority="251" id="EtY-tC-63v">
+                    <rect key="frame" x="17" y="499" width="805" height="42"/>
+                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
+                    <imageCell key="cell" refusesFirstResponder="YES" alignment="left" imageAlignment="left" imageScaling="proportionallyDown" imageFrameStyle="grayBezel" image="NSFolder" id="2xS-y6-OuT"/>
+                </imageView>
+                <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" id="bzN-R5-MAb">
+                    <rect key="frame" x="60" y="505" width="747" height="23"/>
+                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
+                    <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" sendsActionOnEndEditing="YES" alignment="left" title="00001" id="aFv-iM-PeA">
+                        <font key="font" metaFont="system" size="16"/>
+                        <color key="textColor" name="controlTextColor" catalog="System" colorSpace="catalog"/>
+                        <color key="backgroundColor" name="controlColor" catalog="System" colorSpace="catalog"/>
+                    </textFieldCell>
+                </textField>
+                <button verticalHuggingPriority="750" id="04g-Sn-X9w">
+                    <rect key="frame" x="14" y="13" width="219" height="32"/>
+                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
+                    <buttonCell key="cell" type="push" title="Button" bezelStyle="rounded" image="NSStatusNone" imagePosition="left" alignment="center" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="Koh-I5-tdO">
+                        <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
+                        <font key="font" metaFont="system"/>
+                    </buttonCell>
+                </button>
+                <scrollView horizontalLineScroll="120" horizontalPageScroll="10" verticalLineScroll="120" verticalPageScroll="10" hasHorizontalScroller="NO" usesPredominantAxisScrolling="NO" id="KG3-su-8be">
+                    <rect key="frame" x="20" y="52" width="799" height="434"/>
+                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
+                    <clipView key="contentView" copiesOnScroll="NO" id="djt-Si-TZI">
+                        <rect key="frame" x="1" y="1" width="782" height="432"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <ikImageBrowserView autoresizesSubviews="NO" zoomValue="0.39009472727775574" id="4Ng-qR-G4T">
+                                <rect key="frame" x="0.0" y="0.0" width="782" height="432"/>
+                                <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                                <autoresizingMask key="contentResizingMask" heightSizable="YES"/>
+                                <size key="cellSize" width="100" height="100"/>
+                            </ikImageBrowserView>
+                        </subviews>
+                    </clipView>
+                    <scroller key="horizontalScroller" hidden="YES" verticalHuggingPriority="750" horizontal="YES" id="wAF-0o-fvr">
+                        <rect key="frame" x="-100" y="-100" width="618" height="15"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </scroller>
+                    <scroller key="verticalScroller" verticalHuggingPriority="750" doubleValue="1" horizontal="NO" id="Hjm-VN-IIq">
+                        <rect key="frame" x="783" y="1" width="15" height="432"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </scroller>
+                </scrollView>
+            </subviews>
+        </customView>
     </objects>
     <resources>
         <image name="NSActionTemplate" width="14" height="14"/>
         <image name="NSAdvanced" width="32" height="32"/>
+        <image name="NSFolder" width="32" height="32"/>
         <image name="NSIconViewTemplate" width="11" height="10"/>
+        <image name="NSStatusNone" width="16" height="16"/>
+        <image name="NSUserGroup" width="32" height="32"/>
     </resources>
 </document>
