--- a/CCS-Uploader/Controllers/Wizard/BrowseView.xib
+++ b/CCS-Uploader/Controllers/Wizard/BrowseView.xib
@@ -103,9 +103,9 @@
                                         <tableColumnResizingMask key="resizingMask" resizeWithTable="YES" userResizable="YES"/>
                                         <prototypeCellViews>
                                             <popUpButton verticalHuggingPriority="750" id="XuU-fU-SuL">
-                                                <rect key="frame" x="155" y="1" width="140" height="26"/>
+                                                <rect key="frame" x="155" y="1" width="140" height="21"/>
                                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
-                                                <popUpButtonCell key="cell" type="push" bezelStyle="rounded" alignment="left" lineBreakMode="truncatingTail" borderStyle="borderAndBezel" imageScaling="proportionallyDown" inset="2" id="ph7-dv-Zvt">
+                                                <popUpButtonCell key="cell" type="push" bezelStyle="rounded" alignment="left" lineBreakMode="truncatingTail" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="ph7-dv-Zvt">
                                                     <behavior key="behavior" lightByBackground="YES" lightByGray="YES"/>
                                                     <font key="font" metaFont="menu"/>
                                                     <menu key="menu" title="OtherViews" id="uRS-kv-mXH"/>
@@ -214,7 +214,7 @@
                                             </tableCellView>
                                         </prototypeCellViews>
                                     </tableColumn>
-                                    <tableColumn identifier="CurrentTask" width="114.265625" minWidth="10" maxWidth="3.4028234663852886e+38" id="Avn-Xu-0Gd">
+                                    <tableColumn identifier="CurrentTask" width="230.11328125" minWidth="10" maxWidth="3.4028234663852886e+38" id="Avn-Xu-0Gd">
                                         <tableHeaderCell key="headerCell" lineBreakMode="truncatingTail" borderStyle="border" alignment="left" title="Current Task">
                                             <font key="font" metaFont="smallSystem"/>
                                             <color key="textColor" name="headerTextColor" catalog="System" colorSpace="catalog"/>
@@ -228,11 +228,11 @@
                                         <tableColumnResizingMask key="resizingMask" resizeWithTable="YES" userResizable="YES"/>
                                         <prototypeCellViews>
                                             <tableCellView id="x4M-RE-eK9">
-                                                <rect key="frame" x="516" y="1" width="114" height="17"/>
+                                                <rect key="frame" x="516" y="1" width="230" height="17"/>
                                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                                 <subviews>
                                                     <textField verticalHuggingPriority="750" horizontalCompressionResistancePriority="250" id="BRF-8Z-QKH">
-                                                        <rect key="frame" x="24" y="-2" width="90" height="17"/>
+                                                        <rect key="frame" x="24" y="-2" width="206" height="17"/>
                                                         <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES"/>
                                                         <textFieldCell key="cell" lineBreakMode="truncatingTail" sendsActionOnEndEditing="YES" title="Table View Cell" id="JQn-G0-7b9">
                                                             <font key="font" metaFont="system"/>
@@ -264,7 +264,7 @@
                                         </textFieldCell>
                                         <prototypeCellViews>
                                             <button verticalHuggingPriority="750" id="Og0-gY-eXX">
-                                                <rect key="frame" x="633" y="1" width="64" height="17"/>
+                                                <rect key="frame" x="749" y="1" width="64" height="17"/>
                                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                                                 <buttonCell key="cell" type="inline" title="View" bezelStyle="inline" alignment="center" borderStyle="border" inset="2" id="UAY-u1-cuj">
                                                     <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
@@ -289,7 +289,7 @@
                                         </textFieldCell>
                                         <prototypeCellViews>
                                             <button verticalHuggingPriority="750" id="6VJ-fc-41B">
-                                                <rect key="frame" x="700" y="1" width="64" height="17"/>
+                                                <rect key="frame" x="816" y="1" width="64" height="17"/>
                                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                                                 <buttonCell key="cell" type="inline" title="Delete" bezelStyle="inline" alignment="center" borderStyle="border" inset="2" id="39K-GQ-DaQ">
                                                     <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
@@ -350,6 +350,14 @@
                     <rect key="frame" x="587" y="432" width="148" height="32"/>
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                     <buttonCell key="cell" type="push" title="Photographers" bezelStyle="rounded" image="NSUserGroup" imagePosition="left" alignment="center" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="OY8-wY-WEE">
+                        <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
+                        <font key="font" metaFont="system"/>
+                    </buttonCell>
+                </button>
+                <button verticalHuggingPriority="750" id="3tM-Sx-CYf">
+                    <rect key="frame" x="453" y="432" width="134" height="32"/>
+                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
+                    <buttonCell key="cell" type="push" title="Green Screen" bezelStyle="rounded" image="NSStatusAvailable" imagePosition="left" alignment="center" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="BHs-sU-on4">
                         <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
                         <font key="font" metaFont="system"/>
                     </buttonCell>
@@ -425,7 +433,10 @@
                     <modifierMask key="keyEquivalentModifierMask"/>
                     <menu key="submenu" title="Generate previews for selected folders" id="ZHS-7O-NVG">
                         <items>
-                            <menuItem title="Item" id="fOI-pT-yh8">
+                            <menuItem title="All" id="fOI-pT-yh8">
+                                <modifierMask key="keyEquivalentModifierMask"/>
+                            </menuItem>
+                            <menuItem title="Unsent" id="mdK-b2-Tps">
                                 <modifierMask key="keyEquivalentModifierMask"/>
                             </menuItem>
                         </items>
@@ -435,7 +446,10 @@
                     <modifierMask key="keyEquivalentModifierMask"/>
                     <menu key="submenu" title="Generate previews for all folders" id="sb6-LT-RXT">
                         <items>
-                            <menuItem title="Item" id="eVO-gK-EK6">
+                            <menuItem title="All" id="eVO-gK-EK6">
+                                <modifierMask key="keyEquivalentModifierMask"/>
+                            </menuItem>
+                            <menuItem title="Unsent" id="NhE-qx-19p">
                                 <modifierMask key="keyEquivalentModifierMask"/>
                             </menuItem>
                         </items>
@@ -458,16 +472,16 @@
             </connections>
         </popover>
         <customView id="dBi-ji-N2n">
-            <rect key="frame" x="0.0" y="0.0" width="839" height="558"/>
+            <rect key="frame" x="0.0" y="0.0" width="839" height="526"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
             <subviews>
                 <imageView horizontalHuggingPriority="251" verticalHuggingPriority="251" id="EtY-tC-63v">
-                    <rect key="frame" x="17" y="499" width="805" height="42"/>
+                    <rect key="frame" x="17" y="467" width="805" height="42"/>
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                     <imageCell key="cell" refusesFirstResponder="YES" alignment="left" imageAlignment="left" imageScaling="proportionallyDown" imageFrameStyle="grayBezel" image="NSFolder" id="2xS-y6-OuT"/>
                 </imageView>
                 <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" id="bzN-R5-MAb">
-                    <rect key="frame" x="60" y="505" width="747" height="23"/>
+                    <rect key="frame" x="60" y="473" width="747" height="23"/>
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                     <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" sendsActionOnEndEditing="YES" alignment="left" title="00001" id="aFv-iM-PeA">
                         <font key="font" metaFont="system" size="16"/>
@@ -475,16 +489,8 @@
                         <color key="backgroundColor" name="controlColor" catalog="System" colorSpace="catalog"/>
                     </textFieldCell>
                 </textField>
-                <button verticalHuggingPriority="750" id="04g-Sn-X9w">
-                    <rect key="frame" x="14" y="13" width="219" height="32"/>
-                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
-                    <buttonCell key="cell" type="push" title="Button" bezelStyle="rounded" image="NSStatusNone" imagePosition="left" alignment="center" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="Koh-I5-tdO">
-                        <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
-                        <font key="font" metaFont="system"/>
-                    </buttonCell>
-                </button>
                 <scrollView horizontalLineScroll="120" horizontalPageScroll="10" verticalLineScroll="120" verticalPageScroll="10" hasHorizontalScroller="NO" usesPredominantAxisScrolling="NO" id="KG3-su-8be">
-                    <rect key="frame" x="20" y="52" width="799" height="434"/>
+                    <rect key="frame" x="20" y="20" width="799" height="434"/>
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                     <clipView key="contentView" copiesOnScroll="NO" id="djt-Si-TZI">
                         <rect key="frame" x="1" y="1" width="782" height="432"/>
@@ -515,7 +521,7 @@
         <image name="NSAdvanced" width="32" height="32"/>
         <image name="NSFolder" width="32" height="32"/>
         <image name="NSIconViewTemplate" width="11" height="10"/>
-        <image name="NSStatusNone" width="16" height="16"/>
+        <image name="NSStatusAvailable" width="16" height="16"/>
         <image name="NSUserGroup" width="32" height="32"/>
     </resources>
 </document>
